# TinyRenderPractice

./: CMakeLists.txt  L1_Bresenham_Line_Algorithm.cpp  L1_Bresenham_Line_Algorithm.h  L1_load_model_obj.cpp  L2_Triangle.cpp  L3_zBuffer.cpp  L4_PerspectiveProjection.cpp  L5_Camera.cpp  L6_Shader.cpp  L7_Shadow.cpp  L8_ambient_occlusion.cpp  L8_ssao.cpp  ReadMe.md  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp
Lession1_Result/: image_bresenham_line.tga  image_line1.tga  image_line2.tga
Lession3_Result/: l3_texture.tga  texture.tga
Lession4_Result/: l4_projection.tga  l4_projection_texture.tga
Lession5_Result/: l5_camera.tga  l5_camera_texture.tga
Lession6_Result/: L6_output_gouraud.tga  L6_output_normal_mapping.tga  L6_output_phong.tga  L6_output_specular.tga
Lession7_Result/: lession7_final.tga  lession7_final_noshadow.tga
Lession8_Result/: l8_ao.tga  l8_depth.tga  l8_occl.tga  l8_ssao.tga  l8_total.tga
Lesson6_Result/: L6_output.tga  L6_zbuffer.tga  L6_zbuffer_normal_mapping.tga
